@@ -30,4 +30,4 @@ D/wmlscript////
 /install-sh/1.2/Fri Nov 11 16:58:36 2005//
 /missing/1.1/Fri Nov 11 16:58:35 2005//
 /mkinstalldirs/1.1/Fri Nov 11 16:58:32 2005//
-/ChangeLog/1.2736/Tue Feb 21 11:40:32 2006//
+/ChangeLog/1.2737/Tue Feb 21 17:14:36 2006//
